# docuscope-ca-online

./: .gitignore  Dockerfile  README.md  corpus_analysis.py  docker-compose.yml  index.py  main_page.py  options.toml  pyproject.toml  requirements.txt  states.py
.streamlit/: config.toml  secrets.toml
apps/: advanced_plotting.py  collocations.py  compare_corpora.py  compare_corpus_parts.py  download_tagged_files.py  getting_started.py  kwic.py  load_corpus.py  ngrams.py  single_document.py  tag_frequencies.py  tagsets.py  tagsets_toggling.py  token_frequencies.py
connections/: __init__.py
pages/: 10_single_document.py  11_advanced_plotting.py  12_download_tagged_files.py  1_tagsets.py  2_load_corpus.py  3_token_frequencies.py  3_token_frequency.py  4_tag_frequencies.py  5_ngrams.py  6_kwic.py  7_collocations.py  8_compare_corpora.py  9_compare_corpus_parts.py  9_single_document.py
server/: downloads.py  patches.py  rerun.py  session.py
utilities/: __init__.py  analysis_functions.py  config.py  content.py  content_desktop.py  content_online.py  handlers_database.py  handlers_imports.py  handlers_local.py  handlers_server.py  messages.py  process_corpus_nodetect.py  process_functions.py  warnings.py
webapp/: index.py  menu.py  options.toml
webapp/pages/: 10_single_document.py  11_assisted_plotting.py  12_assisted_analysis.py  13_download_corpus.py  14_download_tagged_files.py  1_load_corpus.py  2_token_frequencies.py  3_tag_frequencies.py  4_ngrams.py  5_compare_corpora.py  6_compare_corpus_parts.py  7_collocations.py  8_kwic.py  9_advanced_plotting.py
webapp/utilities/: __init__.py  analysis.py  cache.py  content.py  formatters.py  (+4 more)
(+58 files in other folders)
