[project]
name = "docuscope-ca-online"
version = "0.3.3"
description = "An online version of the Docuscope CA tool for analyzing text."
readme = "README.rst"
requires-python = ">=3.9"
keywords = ["nlp", "language"]
authors = [
    { name = "David Brown", email = "dwb2@andrew.cmu.edu" }
]
maintainers = [
    { name = "David Brown", email = "dwb2@andrew.cmu.edu" }
]
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "Authlib==1.5.2",
    "docuscospacy==0.3.3",
    "docx==0.2.4",
    "google-cloud-firestore==2.20.2",
    "lingua-language-detector==2.0.2",
    "kaleido==0.2.1",
    "openai==1.66.5",
    "pandasai==3.0.0b16",
    "python-docx==1.1.2",
    "scikit-learn==1.6.1",
    "streamlit-ace==0.1.1",
    "streamlit==1.45.1",
    "tomli==2.2.1",
    "tomlkit==0.13.2",
    "Unidecode==1.3.8",
    "watchdog==6.0.0",
    "XlsxWriter==3.2.2",
]

[project.urls]
Documentation = "https://browndw.github.io/docuscope-ca-online/"
Homepage = "https://github.com/browndw/docuscope-ca-online"

[build-system]
requires = ["setuptools>=45", "setuptools-scm>=6.2", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages]
find = { namespaces = false }

[tool.setuptools_scm]

[tool.distutils.bdist_wheel]
universal = 1